2002-11-02  Masatake YAMATO  <jet@gyve.org>

	* README: removed GYVE.

	* doc/keybindings.txt: added a item for stamping.

	* doc/architecture.txt: Fix a typo in a document.
	/ is forgotten in a sample svg.

	* src/rect-context.c (sp_rect_context_config_widget): Fix a typo in a 
	label.

2002-11-01  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/desktop.h: s/GtkEventBoxClass/SPViewClass/; thanks to MenTaLguY

	* configure.in (have_gnome_print): Gnome-print support can be disabled

	* src/libnrtype/Makefile.am (INCLUDES): SODIPODI_GNOME_PRINT_CFLAGS

	* src/Makefile.am (sodipodi_LDADD): Added SODIPODI_GNOME_PRINT_LIBS
	(INCLUDES): Same for CFLAGS

2002-10-31  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/widgets/font-selector.c (struct _SPFontSelector): Use NRNameListss
	(sp_font_selector_init): Setup family namelist
	(sp_font_selector_family_select_row): Setup style namelist
	(sp_font_selector_set_font): Use namelist

	* src/libnrtype/nr-type-directory.c (nr_type_directory_lookup): New method
	(nr_type_directory_style_list_get): Return list of full names

	* src/libnrtype/nr-typeface.h: Added full name, removed generic style query

2002-10-31  Masatake YAMATO  <jet@gyve.org>

	* src/sp-image.c (autotrace_dialog): invokeed frontline_init
	if it is defined. in-cvs version of frontline defines 
	frontline_init.

2002-10-27  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/helper/curve.c (sp_bpath_clean): Fixed warning (thanks to MenTaLguY)

2002-10-26  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/text-edit.c (sp_text_edit_dialog_update_object): Make
	style srings lowercase before applying

	* src/dialogs/desktop-properties.c (sp_desktop_dialog_new): Added
	togglebutton for showing/hiding page border

	* src/desktop.c (sp_dt_namedview_modified): Show/hide page border

	* src/sp-namedview.c (sp_namedview_read_attr): Listen to "showborder"

2002-10-25  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/item-properties.c: Removed libglade dependency