@@ -15,16 +15,18 @@
 typedef struct _NRTypeFaceGnome NRTypeFaceGnome;
 
 #include <libnrtype/nr-rasterfont.h>
+#include <libnrtype/nr-type-directory.h>
 #include <libgnomeprint/gnome-font.h>
 
 struct _NRTypeFaceGnome {
 	NRTypeFace typeface;
 
-	NRTypeFaceGnome *prev, *next;
 	GnomeFontFace *face;
 	NRFont *fonts;
 };
 
-NRTypeFace *nr_typeface_gnome_new (GnomeFontFace *gff);
+NRNameList *nr_type_gnome_typefaces_get (NRNameList *typefaces);
+NRNameList *nr_type_gnome_families_get (NRNameList *families);
+void nr_type_gnome_build_def (NRTypeFaceDef *def, const unsigned char *name);
 
 #endif
